--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
 		<version>1.0.0</version>
 	</parent>
 
-
 	<artifactId>org.azolla.p.roc</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
@@ -52,6 +51,10 @@
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>jsr305</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
 		</dependency>
 	</dependencies>
 </project>
