--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -6,7 +6,7 @@ jdbc.show_sql=true
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.jdbcUrl=jdbc:mysql://mysql.shaneking.org:3306/org_azolla_p_roc
 jdbc.user=org_azolla_p_roc
-jdbc.password=p@ssw0rd
+jdbc.password=org_azolla_p_roc
 jdbc.maxPoolSize=100
 jdbc.minPoolSize=2
 jdbc.initialPoolSize=2
