--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<groupId>org.azolla.p</groupId>
 		<artifactId>org.azolla.p</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2</version>
 		<relativePath>../org.azolla.p</relativePath>
 	</parent>
 
 	<artifactId>org.azolla.p.roc</artifactId>
-	<version>1.0.1</version>
+	<!--<version>1.0.1</version>-->
 	<packaging>war</packaging>
 	<name>Roc: Azolla.org Blog</name>
 	<description>Roc is a blog system.</description>
