--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,10 @@
 
 	<dependencies>
         <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.belerweb</groupId>
             <artifactId>pinyin4j</artifactId>
         </dependency>
@@ -254,6 +258,10 @@
             <groupId>org.azolla.l</groupId>
             <artifactId>org.azolla.l.ling</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.azolla.w</groupId>
+            <artifactId>org.azolla.w.alioss</artifactId>
+        </dependency>
 	</dependencies>
 
     <build>
@@ -273,18 +281,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-            </plugin>
-            <plugin><!-- resources -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-            </plugin>
-            <plugin><!-- test -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
-            <plugin><!-- test report -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
