log path,hidden highcharts,adjust crontab

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -51,7 +51,7 @@ log4j.appender.LOGFILE.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss,SSS}] [%
 
 # LOGFILEDAY is set to be a DailyRollingFileAppender using a PatternLayout.
 log4j.appender.LOGFILEDAY=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.LOGFILEDAY.File=${user.home}/Azolla/logs/org.azolla.open.log
+log4j.appender.LOGFILEDAY.File=${user.home}/Azolla/logs/org.azolla.p.roc.log
 log4j.appender.LOGFILEDAY.DatePattern='.'yyyy-MM-dd
 log4j.appender.LOGFILEDAY.Append=true
 #log4j.appender.LOGFILE.Threshold=INFO
