root folder unified

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>org.azolla.p.roc</artifactId>
   <version>2.0.3.3</version>
   <packaging>war</packaging>
-  <name>Azolla.org Blog System</name>
+  <name>Roc</name>
   <description>Azolla.org Blog System</description>
   <url>https://github.com/Azollas/org.azolla.p.roc</url>
   <inceptionYear>2011</inceptionYear>
@@ -22,10 +22,10 @@
   </organization>
   <licenses>
     <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <name>MIT</name>
+      <url>https://opensource.org/licenses/MIT</url>
       <distribution>repo</distribution>
-      <comments>The Azolla.org Projects is released under version 2.0 of the Apache License.</comments>
+      <comments>The Azolla.org Projects is released under MIT License.</comments>
     </license>
   </licenses>
   <developers>
@@ -50,8 +50,8 @@
       <name>iShaneKing</name>
       <email>git@azolla.org</email>
       <url>https://github.com/iShaneKing</url>
-      <organization>Azollas</organization>
-      <organizationUrl>https://github.com/Azollas</organizationUrl>
+      <organization>iShaneKings</organization>
+      <organizationUrl>https://github.com/iShaneKings</organizationUrl>
       <roles>
         <role>Team Leader</role>
       </roles>
